packages/next-swc/crates/next-custom-transforms/tests/errors/server-actions/server-graph/3/input.js
'use server'

export const x = 1
